--- a/my app/src/Components/7.1 Increment/style.css
+++ b/my app/src/Components/7.1 Increment/style.css
@@ -1,6 +1,7 @@
 .counter {
     padding: 10px;
     margin: 10px;
+    margin: auto;
     width: 130px;
     display: flex;
     align-items: center;
