--- a/my app/src/Components/Card/style.css
+++ b/my app/src/Components/Card/style.css
@@ -2,7 +2,11 @@
     margin: 10px;
     padding: 10px;
     width: 550px;
-    border: 2px solid #333;
+    /* border: 2px solid #333; */
+    box-shadow: rgba(0, 0, 0, 0.07) 0px 1px 2px,
+     rgba(0, 0, 0, 0.07) 0px 2px 4px,
+     rgba(0, 0, 0, 0.07) 0px 4px 8px, rgba(0, 0, 0, 0.07) 0px 8px 16px, 
+     rgba(0, 0, 0, 0.07) 0px 16px 32px, rgba(0, 0, 0, 0.07) 0px 32px 64px;
 }
 
 .cards {
@@ -21,5 +25,6 @@
 
 .card-image{
     width:100%;
+   
       
 }
